@@ -5,6 +5,7 @@
 * Added an option for the length to truncate blog/comment blurbs.
 * Website URL option will now also be used for the link in BlogFeed's.
 * Hide label option has been removed and is only used on a per-feed basis if it's valid.
+* CAN_LABEL and MUST_LABEL are obsolete. There is no more option to hide labels (since labels are now data).
 
 0.96c
 
